Update Czech translation by Milan Knizek

--- a/help/cs/cs.po
+++ b/help/cs/cs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager help master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager\n"
-"POT-Creation-Date: 2010-05-24 12:55+0000\n"
-"PO-Revision-Date: 2010-07-02 22:24+0100\n"
+"POT-Creation-Date: 2010-11-15 22:53+0000\n"
+"PO-Revision-Date: 2010-11-19 21:05+0100\n"
 "Last-Translator: Milan Knížek <knizek@volny.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,76 +20,54 @@ msgstr ""
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:188(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
 msgid "@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
 msgstr "@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:226(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
 msgid "@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
 msgstr "@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:292(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
 msgid "@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 msgstr "@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:347(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
 msgid "@@image: 'figures/gcm-scanner.png'; md5=56aa2d37e8822f43cb18d36ac0b16462"
 msgstr "@@image: 'figures/gcm-scanner.png'; md5=56aa2d37e8822f43cb18d36ac0b16462"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:371(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-calibrate-default.png'; "
-#| "md5=21815551aae222d703032db710598b70"
 msgid "@@image: 'figures/gcm-calibrate-default.png'; md5=7283123ce0de7e77abb61a0a93567db0"
 msgstr "@@image: 'figures/gcm-calibrate-default.png'; md5=7283123ce0de7e77abb61a0a93567db0"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:383(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-calibrate-drawing.png'; "
-#| "md5=8fcee7383b49c1d2fd487f5e9b6beb25"
 msgid "@@image: 'figures/gcm-calibrate-drawing.png'; md5=16f5a9957a4f778d291d8553bafb84d6"
 msgstr "@@image: 'figures/gcm-calibrate-drawing.png'; md5=16f5a9957a4f778d291d8553bafb84d6"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:402(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-device-configure.png'; "
-#| "md5=b322b0ebc3ad1b7af4a80f71e7ec6b06"
 msgid "@@image: 'figures/gcm-device-configure.png'; md5=09a36ef8349ba57ec3c20d51b42c0b30"
 msgstr "@@image: 'figures/gcm-device-configure.png'; md5=09a36ef8349ba57ec3c20d51b42c0b30"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:419(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-screen-type.png'; "
-#| "md5=1f87ec2557bf4890bc6906e030a505b2"
 msgid "@@image: 'figures/gcm-screen-type.png'; md5=962a864273cb062bcef96ed10f3b0931"
 msgstr "@@image: 'figures/gcm-screen-type.png'; md5=962a864273cb062bcef96ed10f3b0931"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:436(None)
-#| msgid ""
-#| "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
 msgid "@@image: 'figures/gcm-print-mode.png'; md5=7b1ccf09329e097ba54c12ee009417b6"
 msgstr "@@image: 'figures/gcm-print-mode.png'; md5=7b1ccf09329e097ba54c12ee009417b6"
 
@@ -511,11 +489,11 @@ msgstr "Colorimètre HCFR (colorimeter)"
 
 #: C/gnome-color-manager.xml:574(title)
 msgid "Which target types are supported?"
-msgstr "Které typy vzorníků jsou podporovány?"
+msgstr "Které typy obrazců jsou podporovány?"
 
 #: C/gnome-color-manager.xml:575(para)
 msgid "GNOME Color Manager supports the following types of targets:"
-msgstr "Správce barev GNOME podporuje následující typy vzorníků:"
+msgstr "Správce barev GNOME podporuje následující typy obrazců:"
 
 #: C/gnome-color-manager.xml:580(para)
 msgid "CMP DigitalTarget"
@@ -551,11 +529,11 @@ msgstr "IT8.7/2"
 
 #: C/gnome-color-manager.xml:622(title)
 msgid "Where do I purchase targets from?"
-msgstr "Kde mohu koupit vzorníky?"
+msgstr "Kde mohu koupit obrazce?"
 
 #: C/gnome-color-manager.xml:623(para)
 msgid "You can purchase targets from well-known vendors like KODAK, X-Rite and LaserSoft in various online shops. Alternatively you can buy targets from <ulink url=\"http://www.targets.coloraid.de/\" type=\"http\">Wolf Faust</ulink> at a very fair price."
-msgstr "Vzorníky můžete koupit od známých výrobců jako jsou KODAK, X-Rite a LaserSoft v různých internetových obchodech. Můžete je též koupit od <ulink url=\"http://www.targets.coloraid.de/\" type=\"http\">Wolfa Fausta</ulink> za velmi příznivou cenu."
+msgstr "Obrazce můžete koupit od známých výrobců jako jsou KODAK, X-Rite a LaserSoft v různých internetových obchodech. Můžete je též koupit od <ulink url=\"http://www.targets.coloraid.de/\" type=\"http\">Wolfa Fausta</ulink> za velmi příznivou cenu."
 
 #: C/gnome-color-manager.xml:633(title)
 msgid "About"
