--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Version 2.91.3
+~~~~~~~~~~~~~~
+Released: 2010-12-01
+
+* Translations
+ - Added UG translation (Gheyret T.Kenji)
+ - Updated Czech translation (Milan Knizek)
+ - Updated Galician translations (Fran Diéguez)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Romanian translation (Daniel Șerbănescu)
+ - Updated Romanian translation (Lucian Adrian Grijincu)
+
+* New Features:
+ - Set 'ICC meta Tag for Monitor Profiles' data for future use (Richard Hughes)
+* Bugfix:
+ - Do not create auto-profiles for XRandR devices without EDID data (Richard Hughes)
+ - Don't segfault if cmsCreateRGBProfile fails. Fixes rh#653419 (Richard Hughes)
+ - Never show the 'Fine tuning' section in the control center, it invalidates the profiles (Richard Hughes)
+ - Remove the display tab in the color panel (Richard Hughes)
+
 Version 2.91.2
 ~~~~~~~~~~~~~~
 Released: 2010-11-08
