Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-12-30 00:10+0100\n"
-"PO-Revision-Date: 2010-12-30 01:15+0100\n"
+"PO-Revision-Date: 2010-12-30 01:42+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -94,9 +94,8 @@ msgid "The default calibration length."
 msgstr "Standardlängden för kalibrering."
 
 #: ../data/gnome-color-manager.schemas.in.h:13
-#, fuzzy
 msgid "The default gamma to use for monitors with no previous value set."
-msgstr "Standardgamma att använda för skärmar utan tidigare inställning."
+msgstr "Standardgamma att använda för skärmar utan tidigare inställda värden."
 
 #: ../data/gnome-color-manager.schemas.in.h:14
 msgid "The duration between sending notifications to recalibrate a display."
@@ -477,12 +476,12 @@ msgstr "Läs sakta av längs mållinjen från vänster till höger och släpp kn
 #. TRANSLATORS: dialog message, the sensor has to be above the line
 #: ../src/gcm-calibrate-argyll.c:2500
 msgid "Ensure the center of the device is properly aligned with the row you are trying to measure."
-msgstr ""
+msgstr "Försäkra dig om att mitten på enheten är korrekt justerad mot den rad som du försöker att mäta."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2504
 msgid "If you make a mistake just release the switch and you'll get a chance to try again."
-msgstr ""
+msgstr "Om du gör fel så släpp bara knapen och du får en chans att försöka igen."
 
 #. TRANSLATORS: title, printing reference files to media
 #: ../src/gcm-calibrate-argyll.c:2642
@@ -547,12 +546,12 @@ msgstr "Ange om skärmen som du försäker att profilera är en LCD, CRT eller e
 #. TRANSLATORS: title, the hardware calibration device does not support projectors
 #: ../src/gcm-calibrate.c:419
 msgid "Could not calibrate and profile using this color measuring instrument"
-msgstr ""
+msgstr "Kunde inte kalibrera och profilera med detta färgmätningsinstrument"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate.c:422
 msgid "This color measuring instrument is not designed to support calibration and profiling projectors."
-msgstr ""
+msgstr "Detta färgmätningsinstrument är inte designat för att hantera kalibrering och profilering av projektorer."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate.c:483
@@ -567,12 +566,12 @@ msgstr ""
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:489
 msgid "For a typical workflow, a normal precision profile is sufficient."
-msgstr ""
+msgstr "För ett vanligt arbetsflöde så är en normal precisionsprofil tillräcklig."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:494
 msgid "The high precision profile also requires more paper and printer ink."
-msgstr ""
+msgstr "Den högre precisionsprofilen kräver också mer papper och skrivarbläck."
 
 #. TRANSLATORS: this is the formattted custom profile description. "Custom" refers to the fact that it's user generated
 #: ../src/gcm-calibrate.c:568
@@ -587,7 +586,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:603
 msgid "You may want to consult the owner's manual for your display on how to achieve these settings."
-msgstr ""
+msgstr "Du kanske vill referera till handboken för din skärm om hur man uppnår dessa inställningar."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:606
@@ -597,12 +596,12 @@ msgstr "Återställ din skärm till fabriksinställningarna."
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:609
 msgid "Disable dynamic contrast if your display has this feature."
-msgstr ""
+msgstr "Inaktivera dynamisk kontrast om din skärm har denna funktion."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:612
 msgid "Configure your display with custom color settings and ensure the RGB channels are set to the same values."
-msgstr ""
+msgstr "Konfigurera din skärm med anpassade färginställningar och försäkra dig om att RGB-kanalerna är inställda till samma värden."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate.c:615
@@ -672,7 +671,7 @@ msgstr "Välj ett profileringsläge"
 #. * device to create a profile
 #: ../src/gcm-calibrate.c:884
 msgid "Please indicate if you want to profile a local printer, generate some test patches, or profile using existing test patches."
-msgstr ""
+msgstr "Välj om du vill profilera en lokal skrivare, generera några testmätrutor eller profilera med befintliga testmätrutor."
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-calibrate.c:996
@@ -682,12 +681,12 @@ msgstr "Installera saknade filer?"
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-calibrate.c:999
 msgid "Common color target files are not installed on this computer."
-msgstr ""
+msgstr "Vanliga målfärgfiler har inte installerats på denna dator."
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-calibrate.c:1001
 msgid "Color target files are needed to convert the image to a color profile."
-msgstr ""
+msgstr "Färgmålfiler behövs för att konvertera bilden till en färgprofil."
 
 #. TRANSLATORS: dialog message, asking if it's okay to install them
 #: ../src/gcm-calibrate.c:1003
@@ -730,7 +729,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:1037
 msgid "Ensure that the contrast and brightness are not changed and color correction profiles are not applied."
-msgstr ""
+msgstr "Försäkra dig om att kontrast och ljusstyrka inte är ändrade och att färgkorrigeringsprofiler inte har tillämpats."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:1040
@@ -852,7 +851,7 @@ msgstr "Sammandrag"
 #. TRANSLATORS: message text
 #: ../src/gcm-calibrate-manual.c:391
 msgid "This display is now calibrated. You can change the current profile using the Color Profiles program."
-msgstr ""
+msgstr "Denna skärm är nu kalibrerad. Du kan ändra den aktuella profilen med programmet Färgprofiler."
 
 #. TRANSLATORS: error message
 #: ../src/gcm-client.c:1103
@@ -917,12 +916,12 @@ msgstr "Gamma"
 #. TRANSLATORS: command line option: a list of files to parse
 #: ../src/gcm-dump-edid.c:136
 msgid "EDID dumps to parse"
-msgstr ""
+msgstr "EDID-dumpar att tolka"
 
 #. TRANSLATORS: this is the filename we are displaying
 #: ../src/gcm-dump-edid.c:159
 msgid "EDID dump"
-msgstr ""
+msgstr "EDID-dump"
 
 #. TRANSLATORS: we saved the EDID to a file - second parameter is a filename
 #: ../src/gcm-dump-edid.c:196
@@ -1044,7 +1043,7 @@ msgstr "Profil för rotfönster:"
 #. TRANSLATORS: the root window of all the screens
 #: ../src/gcm-inspect.c:114
 msgid "Root window protocol version:"
-msgstr ""
+msgstr "Protokollversion för rotfönstret:"
 
 #: ../src/gcm-inspect.c:130
 #, c-format
@@ -1135,7 +1134,7 @@ msgstr "Skriv ut alla detaljer om detta system"
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:531
 msgid "EDID inspect program"
-msgstr ""
+msgstr "Inspektionsprogram för EDID"
 
 #. TRANSLATORS: this is when the user does --type=mickeymouse
 #: ../src/gcm-inspect.c:548
@@ -1150,7 +1149,7 @@ msgstr "Enhetens id, t.ex. \"xrandr_ibm_france_ltn154p2_l05\""
 #. TRANSLATORS: tool that is used when copying profiles system-wide
 #: ../src/gcm-install-system-wide.c:141
 msgid "GNOME Color Manager ICC profile system-wide installer"
-msgstr ""
+msgstr "Systeminstallationsprogram för ICC-profiler - GNOME-färghanterare"
 
 #. TRANSLATORS: user did not specify a valid filename
 #: ../src/gcm-install-system-wide.c:149
@@ -1880,15 +1879,15 @@ msgstr ""
 
 #: ../data/gcm-prefs.ui.h:72
 msgid "These settings control how color management is applied to your desktop."
-msgstr ""
+msgstr "Dessa inställningar kontrollera hur färghanteringen tillämpas på ditt skrivbord."
 
 #: ../data/gcm-prefs.ui.h:73
 msgid "This is the default CMYK working space to use in applications"
-msgstr ""
+msgstr "Detta är CMYK-arbetsrymden som standard att använda i program"
 
 #: ../data/gcm-prefs.ui.h:74
 msgid "This is the default RGB working space to use in applications"
-msgstr ""
+msgstr "Detta är RGB-arbetsrymden som standard att använda i program"
 
 #: ../data/gcm-prefs.ui.h:75
 msgid "Working space"
