Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-12-30 01:48+0100\n"
-"PO-Revision-Date: 2010-12-30 01:53+0100\n"
+"PO-Revision-Date: 2010-12-30 09:43+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -512,13 +512,13 @@ msgstr "Fäst instrumentet"
 #: ../src/gcm-calibrate-argyll.c:2258
 #: ../src/gcm-calibrate-native.c:663
 msgid "Please attach the measuring instrument to the center of the screen on the gray square like the image below."
-msgstr "Fäst mätningsinstrumentet till mitten av skärmen på den gråa fyrkanten enligt bilden nedan."
+msgstr "Fäst mätinstrumentet till mitten av skärmen på den gråa fyrkanten enligt bilden nedan."
 
 #. TRANSLATORS: dialog message, ask user to attach device
 #: ../src/gcm-calibrate-argyll.c:2261
 #: ../src/gcm-calibrate-native.c:666
 msgid "Please attach the measuring instrument to the center of the screen on the gray square."
-msgstr "Fäst mätningsinstrumentet till mitten av skärmen på den gråa fyrkanten."
+msgstr "Fäst mätinstrumentet till mitten av skärmen på den gråa fyrkanten."
 
 #. TRANSLATORS: button text
 #: ../src/gcm-calibrate-argyll.c:2274
@@ -537,22 +537,22 @@ msgstr "Konfigurera instrumentet"
 #. TRANSLATORS: this is when the user has to change a setting on the sensor, and we're showing a picture
 #: ../src/gcm-calibrate-argyll.c:2315
 msgid "Please set the measuring instrument to calibration mode like the image below."
-msgstr "Ställ in mätningsinstrumentet till kalibreringsläge enligt bilden nedan."
+msgstr "Ställ in mätinstrumentet till kalibreringsläge enligt bilden nedan."
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: ../src/gcm-calibrate-argyll.c:2318
 msgid "Please set the measuring instrument to calibration mode."
-msgstr "Ställ in mätningsinstrumentet till kalibreringsläge."
+msgstr "Ställ in mätinstrumentet till kalibreringsläge."
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor, and we're showing a picture
 #: ../src/gcm-calibrate-argyll.c:2370
 msgid "Please set the measuring instrument to screen mode like the image below."
-msgstr "Ställ in mätningsinstrumentet till skärmläge enligt bilden nedan."
+msgstr "Ställ in mätinstrumentet till skärmläge enligt bilden nedan."
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor
 #: ../src/gcm-calibrate-argyll.c:2373
 msgid "Please set the measuring instrument to screen mode."
-msgstr "Ställ in mätningsinstrumentet till skärmläge."
+msgstr "Ställ in mätinstrumentet till skärmläge."
 
 #. TRANSLATORS: title, the calibration failed
 #: ../src/gcm-calibrate-argyll.c:2444
@@ -583,12 +583,12 @@ msgstr "Mönstermatchningen var inte bra nog. Försäkra dig om att du har valt 
 #. TRANSLATORS: message, the sensor got no readings
 #: ../src/gcm-calibrate-argyll.c:2524
 msgid "The measuring instrument got no valid readings. Please ensure the aperture is fully open."
-msgstr "Mätningsinstrumentet fick inga giltiga läsningar. Försäkra dig om att bländaren är fullständigt öppen."
+msgstr "Mätinstrumentet fick inga giltiga läsningar. Försäkra dig om att bländaren är fullständigt öppen."
 
 #. TRANSLATORS: message, the colorimeter has got confused
 #: ../src/gcm-calibrate-argyll.c:2527
 msgid "The measuring instrument is busy and is not starting up. Please remove the USB plug and re-insert before trying to use this device."
-msgstr "Mätningsinstrumentet är upptaget och startar inte upp. Koppla från USB-kontakten och anslut den igen innan du försöker att använda denna enhet."
+msgstr "Mätinstrumentet är upptaget och startar inte upp. Koppla från USB-kontakten och anslut den igen innan du försöker att använda denna enhet."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-argyll.c:2565
@@ -647,7 +647,7 @@ msgstr "Redo att läsa ruta %s"
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2667
 msgid "Place the colorimeter on the area of white next to the letter and click and hold the measure switch."
-msgstr "Placera färgmätaren på det vita området bredvid bokstaven. Klicka sedan och håll kvar mätknappen. "
+msgstr "Placera kolorimetern på det vita området bredvid bokstaven. Klicka sedan och håll kvar mätknappen. "
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2671
@@ -742,7 +742,7 @@ msgstr "Profilprecision"
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:521
 msgid "A higher precision profile provides higher accuracy in color matching but requires more time for reading the color patches."
-msgstr ""
+msgstr "En högre precisionsprofil tillhandahåller högre precision i färgmatchningen men kräver mer tid för att läsa färgmätningsrutorna."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:524
@@ -762,7 +762,7 @@ msgstr "Anpassad"
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:674
 msgid "Before calibrating the display, it is recommended to configure your display with the following settings to get optimal results."
-msgstr ""
+msgstr "Det rekommenderas att konfigurera din skärm med följande inställningar för att få optimala resultat före du kalibrerar skärmen."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:677
@@ -787,17 +787,17 @@ msgstr "Konfigurera din skärm med anpassade färginställningar och försäkra 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate.c:689
 msgid "If custom color is not available then use a 6500K color temperature."
-msgstr ""
+msgstr "Om anpassad färg inte är tillgänglig så använd en färgtemperatur på 6500K."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:692
 msgid "Adjust the display brightness to a comfortable level for prolonged viewing."
-msgstr ""
+msgstr "Justera skärmens ljusstyrka till en komfortabel nivå för visning under längre perioder."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:695
 msgid "For best results, the display should have been powered for at least 15 minutes before starting the calibration."
-msgstr ""
+msgstr "För bästa resultat bör skärmen vara påslagen minst 15 minuter före kalibreringen påbörjas."
 
 #: ../src/gcm-calibrate.c:699
 msgid "Display setup"
@@ -877,7 +877,7 @@ msgstr "Välj ett kalibreringsmål"
 #. * this: http://www.colorreference.de/targets/target.jpg
 #: ../src/gcm-calibrate.c:1104
 msgid "Before profiling the device, you have to manually capture an image of a calibration target and save it as a TIFF image file."
-msgstr ""
+msgstr "För enheten profileras så måste du manuellt ta en bild på ett kalibreringsmål och spara det som en TIFF-bildfil."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:1109
@@ -887,17 +887,17 @@ msgstr "Försäkra dig om att kontrast och ljusstyrka inte är ändrade och att 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:1112
 msgid "The device sensor should have been cleaned prior to scanning and the output file resolution should be at least 200dpi."
-msgstr ""
+msgstr "Enhetssensorn bör ha rengjorts före avläsningen och utdatafilens upplösning bör vara minst 200 dpi."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:1118
 msgid "Ensure that the white-balance has not been modified by the camera and that the lens is clean."
-msgstr ""
+msgstr "Försäkra dig om att vitbalansen inte har ändrats av kameran och att linsen är rengjord."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:1122
 msgid "For best results, the reference target should also be less than two years old."
-msgstr ""
+msgstr "För bästa resultat bör referensmålet vara mindre än två år gammalt."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:1125
@@ -978,7 +978,7 @@ msgstr "Det bör endast ta ett par minuter."
 #. * fovea (center bit of the eye) tries to 'pick out' a colour, rather than take the average reading
 #: ../src/gcm-calibrate-manual.c:234
 msgid "It may help to sit further from the screen or to squint at the calibration images in order to accurately compare the colors."
-msgstr ""
+msgstr "Det kan hjälpa att sitta längre från skärmen eller att kisa på kalibreringsbilderna för att bättre kunna jämföra färgerna."
 
 #. TRANSLATORS: message text, tell the use that they can go back and forwards, as the human eye sucks
 #: ../src/gcm-calibrate-manual.c:237
@@ -989,12 +989,12 @@ msgstr "Du kan upprepa kalibreringsstegen så många gånger som du önskar."
 #: ../src/gcm-calibrate-manual.c:249
 #, c-format
 msgid "Create table item %i/%i"
-msgstr ""
+msgstr "Skapa tabellobjekt %i/%i"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-calibrate-manual.c:270
 msgid "Please try to match up the gray square with the surrounding alternating bars. You should match the brightness first, and then if required change the color tint so it looks plain gray."
-msgstr ""
+msgstr "Försök att matcha den grå fyrkanten med en omgivande rutorna. Du bör matcha ljusstyrkan först och sedan, om det krävs, ändra färgtoningen  så att den ser helt grå ut."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-manual.c:367
@@ -1023,7 +1023,7 @@ msgstr "LCD-skärm på bärbar dator"
 #. TRANSLATORS: this is prepended to the device title to let the use know it was generated by us automatically
 #: ../src/gcm-device-xrandr.c:422
 msgid "Automatic"
-msgstr ""
+msgstr "Automatisk"
 
 #. TRANSLATORS: this is displayed when the profile is crap
 #: ../src/gcm-list-store-profiles.c:51
@@ -1284,7 +1284,7 @@ msgstr "Okänd"
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:324
 msgid "No colorimeter is attached."
-msgstr ""
+msgstr "Ingen kolorimeter är ansluten."
 
 #. TRANSLATORS: this is displayed if VTE support is not enabled
 #: ../src/gcm-picker.c:331
@@ -1294,7 +1294,7 @@ msgstr "Detta program kompilerades utan stöd för VTE."
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:341
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr ""
+msgstr "Den anslutna kolorimetern är inte kapabel att läsa en punktfärg."
 
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-picker.c:662
@@ -1304,9 +1304,8 @@ msgstr "Ange föräldrafönstret för att skapa denna modal"
 
 #. TRANSLATORS: tool that is used to pick colors
 #: ../src/gcm-picker.c:680
-#, fuzzy
 msgid "GNOME Color Manager Color Picker"
-msgstr "Färghantering"
+msgstr "Färgväljare - GNOME-färghanterare"
 
 #. TRANSLATORS: button: this is to open GCM
 #: ../src/gcm-session.c:107
@@ -1377,7 +1376,7 @@ msgstr "Högkvalitativa fotografier"
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:523
 msgid "Precise color matching"
-msgstr ""
+msgstr "Exakt färgmatchning"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:527
@@ -1533,21 +1532,21 @@ msgstr "CIE 1931 xy"
 #. TRANSLATORS: combo-entry, this is a graph plot type (what goes in, v.s. what goes out)
 #: ../src/gcm-viewer.c:1010
 msgid "Transfer response curve"
-msgstr ""
+msgstr "Överföringsresponskurva"
 
 #. TRANSLATORS: combo-entry, this is a graph plot type (what data we snd the graphics card)
 #: ../src/gcm-viewer.c:1013
 msgid "Video card gamma table"
-msgstr ""
+msgstr "Gammatabell för grafikkort"
 
 #. TRANSLATORS: combo-entry, this is a preview image of what the profile looks like
 #: ../src/gcm-viewer.c:1016
 msgid "Image preview (from sRGB)"
-msgstr ""
+msgstr "Bildförhandsvisning (från sRGB)"
 
 #: ../src/gcm-viewer.c:1017
 msgid "Image preview (to sRGB)"
-msgstr ""
+msgstr "Bildförhandsvisning (till sRGB)"
 
 #: ../data/gcm-calibrate.ui.h:1
 msgid "Blue:"
@@ -1625,7 +1624,7 @@ msgstr "precision"
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:2
 msgid "Ambient:"
-msgstr ""
+msgstr "Omgivande ljus:"
 
 #. Window title, where the user can pick spot colors using a measuring device
 #: ../data/gcm-picker.ui.h:4
@@ -1709,7 +1708,7 @@ msgstr "Skärm:"
 
 #: ../data/gcm-prefs.ui.h:17
 msgid "For a color managed workflow, each connected device should have one or more color profiles associated with it."
-msgstr ""
+msgstr "För ett färghanterat arbetsflöde så bör varje ansluten enhet ha en eller flera färgprofiler associerade med sig."
 
 #. Technical color word for softproof rendering intent
 #: ../data/gcm-prefs.ui.h:19
@@ -1718,7 +1717,7 @@ msgstr "Grå:"
 
 #: ../data/gcm-prefs.ui.h:20
 msgid "Image files can be dragged on this window to auto-complete the above fields."
-msgstr ""
+msgstr "Bildfiler kan dras till detta fönster för att automatiskt komplettera ovanstående fält."
 
 #: ../data/gcm-prefs.ui.h:21
 msgid "Make default"
@@ -1771,7 +1770,7 @@ msgstr "Spara dessa profiler för alla användare"
 
 #: ../data/gcm-prefs.ui.h:40
 msgid "The rendering intent defines how color should be transformed from one colorspace to another."
-msgstr ""
+msgstr "Återgivningsmetoden definierar hur färgen ska överföras från en färgrymd till en annan."
 
 #. Tab title, icc color spaces to use for different defaults
 #: ../data/gcm-prefs.ui.h:42
